<resources>
    <string name="app_name">Flip Buy</string>
    <string name="flip_buy">Flip Buy</string>
    <string name="enter_mail_id">Enter Mail id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="register_new">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="preference_file_name">Flipbuy Preferences</string>
    <string name="welcome_bac">Welcome Back !</string>
    <string name="today_s_bes">Today\u00E2\u0080\u0099s  best deals\n   upto 40% off</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_products">Other Products</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My WishList</string>
    <string name="offers">Offers</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="i_m_here_to_sell">I\'m here to sell</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="search">Search</string>
</resources>
