<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/dashboard"
            android:icon="@drawable/ic_dashboard"/>

        <item
            android:id="@+id/menu_my_cart"
            android:title="@string/my_cart"
            android:icon="@drawable/ic_cart"/>

        <item
            android:id="@+id/menu_my_account"
            android:title="@string/my_account"
            android:icon="@drawable/ic_acoount"/>
        <item
            android:id="@+id/menu_seller"
            android:title="@string/i_m_here_to_sell"
            android:icon="@drawable/ic_sell"/>
        <item
            android:id="@+id/customer_service"
            android:title="Customer Service"
            android:icon="@drawable/ic_room_service_black_24dp"/>

        <item
            android:id="@+id/menu_signout"
            android:title="@string/sign_out"
            android:icon="@drawable/ic_signout"
            />


    </group>

</menu>