<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OurColor1"
    tools:context="activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="206dp"
        android:layout_height="192dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/shopping1" />

    <EditText

        android:id="@+id/etLoginMailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogoLogin"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:shadowColor="#ffffff"
        android:backgroundTint="@color/OurColor2"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/enter_mail_id"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingTop="20dp"
        android:textSize="18sp"
        android:textColorHint="@color/OurColor4"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginMailid"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:shadowColor="#ffffff"
        android:backgroundTint="@color/OurColor2"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_style"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColorHint="@color/OurColor4"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/OurColor1"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btnLogin"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/etLoginPassword"
        android:padding="8dp"
        android:textSize="10sp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/forget_password"
        android:textColor="#ffffff"
        android:focusable="true" />

    <TextView
        android:id="@+id/txtRegisterNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"

        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:background="@color/OurColor1"
        android:text="@string/register_new"
        android:textColor="#ffffff"

        android:textSize="10sp"/>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="2dp"
        android:textAllCaps="false"
        android:layout_marginBottom="18dp"
        android:background="@color/OurColor1"
        android:layout_toRightOf="@+id/txtRegisterNew"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="12sp"/>


</RelativeLayout>